# QuikTimer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: appcontrol.ts  format.ts  main.tsx  settings.ts  sound.ts  styles.css  theme.ts  timer.ts
src-tauri/: Cargo.toml  gen-icon.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/panel/: Panel.tsx  panel.css
src/settings/: HotkeyInput.tsx  Settings.tsx  settings.css
